Fix logo whitespace issue on xs/sm screens

--- a/_assets/css/_improfestival.scss
+++ b/_assets/css/_improfestival.scss
@@ -53,6 +53,7 @@ i {
     height: 80%;
     margin: 0 auto;
     width: 50%;
+    max-height: 10em;
   }
 
   + .row {
