--- a/_assets/css/_responsive.scss
+++ b/_assets/css/_responsive.scss
@@ -10,6 +10,7 @@
     img {
       height: 90%;
       width: 70%;
+      max-height: 15em;
     }
   }
 
